# image-folder-shrink

./: README.md  image_folder_shrink.py  image_folder_shrink_repair.py  pyproject.toml  repair  run
